e2e/tests/all/snapshots/notifications_polite_desktop.snap
---
source: e2e/src/suite.rs
description: notifications at desktop (polite)
expression: tree
---
button "Notify"
  StaticText "Notify"
button "Notify assertively"
  StaticText "Notify assertively"
button "Notify for a while"
  StaticText "Notify for a while"
generic
  region "Notifications (F8)"
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
    generic
      generic [live=assertive]
      generic [live=polite]
        list
          listitem [level=1]
            group
              generic
                StaticText "Saved to your library"
              button "Close"
