e2e/tests/all/snapshots/notifications_polite_mobile.snap
---
source: e2e/src/suite.rs
description: notifications at mobile (polite)
expression: tree
---
button "Notify"
  StaticText "Notify"
button "Notify assertively"
  StaticText "Notify assertively"
button "Notify for a while"
  StaticText "Notify for a while"
generic
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
  generic
    generic [live=assertive]
    generic [live=polite]
      list
        listitem [level=1]
          group
            generic
              StaticText "Saved to your library"
            button "Close"
