e2e/tests/all/snapshots/notifications_rest_mobile.snap
---
source: e2e/src/suite.rs
description: notifications at mobile (rest)
expression: tree
---
button "Notify"
  StaticText "Notify"
button "Notify assertively"
  StaticText "Notify assertively"
button "Notify for a while"
  StaticText "Notify for a while"
region "Notifications (F8)"
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
  generic [live=assertive]
  generic [live=polite]
