e2e/tests/all/snapshots/number_field_rest_mobile.snap
---
source: e2e/src/suite.rs
description: number_field at mobile (rest)
expression: tree
---
LabelText
  StaticText "Quantity"
spinbutton "Quantity" = 3 [valuemax=0] [valuemin=0] [valuetext=3]
  StaticText "3"
button "Decrease"
button "Increase"
LabelText
  StaticText "Seats"
spinbutton "Seats" = 50 [valuemax=99] [valuemin=10] [valuetext=50]
  description "10 to 99."
  StaticText "50"
button "Decrease"
button "Increase"
StaticText "10 to 99."
LabelText
  StaticText "Weight"
spinbutton "Weight" = 1.5 [valuemax=0] [valuemin=0] [valuetext=1.5]
  StaticText "1.5"
button "Decrease"
button "Increase"
LabelText
  StaticText "Locked"
spinbutton "Locked" = 7 [valuemax=0] [valuemin=0] [valuetext=7]
  StaticText "7"
button "Decrease" [disabled]
button "Increase" [disabled]
LabelText
  StaticText "Disabled"
spinbutton "Disabled" = 7 [disabled] [valuemax=0] [valuemin=0] [valuetext=7]
  StaticText "7"
button "Decrease" [disabled]
button "Increase" [disabled]
