e2e/tests/all/snapshots/phone_field_error_rest_desktop.snap
---
source: e2e/src/suite.rs
description: phone_field_error at desktop (rest)
expression: tree
---
LabelText
  StaticText "Mobile"
button "Country: United States, US +1" [expanded=false] [haspopup=listbox]
  StaticText "US"
  StaticText "+1"
status [atomic] [live=polite]
textbox "Mobile" [invalid] [required]
  description "Enter a phone number."
StaticText "Enter a phone number."
