e2e/tests/all/snapshots/phone_field_open_desktop.snap
---
source: e2e/src/suite.rs
description: phone_field at desktop (open)
expression: tree
---
LabelText
  StaticText "Mobile"
button "Country: Germany, DE +49" [expanded] [haspopup=listbox]
  StaticText "DE"
  StaticText "+49"
status [atomic] [live=polite]
textbox "Mobile"
status [atomic] [live=polite]
paragraph
combobox "Search countries" = ger [autocomplete=list] [expanded] [haspopup=listbox]
  StaticText "ger"
listbox "Country: Germany, DE +49" [orientation=vertical]
  option "Germany +49" [selected]
    StaticText "Germany"
    StaticText "+49"
  option "Algeria +213" [selected=false]
    StaticText "Algeria"
    StaticText "+213"
  option "Niger +227" [selected=false]
    StaticText "Niger"
    StaticText "+227"
  option "Nigeria +234" [selected=false]
    StaticText "Nigeria"
    StaticText "+234"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
